Gui: added ViewProviderLink
Also added companion DocumentObject App::Link and App::XLink for
demostration purpose.

ViewProviderLink is an attempt to introduce Coin3D node sharing into
FreeCAD for more efficient 3D presentation. Use App::Link to cheap clone
the 3D representation of any DocumentObject within the same document,
and App::XLink for cross document clone.

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -896,6 +896,7 @@ SET(Viewprovider_CPP_SRCS
     ViewProviderPart.cpp
     ViewProviderOrigin.cpp
     ViewProviderMaterialObject.cpp
+    ViewProviderLink.cpp
 )
 SET(Viewprovider_SRCS
     ${Viewprovider_CPP_SRCS}
@@ -924,6 +925,7 @@ SET(Viewprovider_SRCS
     ViewProviderPart.h
     ViewProviderOrigin.h
     ViewProviderMaterialObject.h
+    ViewProviderLink.h
 )
 SOURCE_GROUP("View3D\\Viewprovider" FILES ${Viewprovider_SRCS})
 
