--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -169,6 +169,8 @@ SET(Features_SRCS
     DatumFeature.h
     AttachExtension.h
     AttachExtension.cpp
+    PartLink.h
+    PartLink.cpp
 )
 SOURCE_GROUP("Features" FILES ${Features_SRCS})
 
