--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -221,6 +221,8 @@ SET(PartGui_SRCS
     ViewProviderBoolean.h
     ViewProviderRuledSurface.cpp
     ViewProviderRuledSurface.h
+    ViewProviderPartLink.cpp
+    ViewProviderPartLink.h
     Workbench.cpp
     Workbench.h
     TaskFaceColors.cpp
