App::LinkPy: add Placement alias of LinkPlacement

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -82,6 +82,7 @@ generate_from_xml(GeoFeatureGroupExtensionPy)
 generate_from_xml(OriginGroupExtensionPy)
 generate_from_xml(PartPy)
 generate_from_xml(LinkExtensionPy)
+generate_from_xml(LinkPy)
 
 generate_from_xml(ComplexGeoDataPy)
 generate_from_xml(PropertyContainerPy)
@@ -106,6 +107,7 @@ SET(FreeCADApp_XML_SRCS
     ComplexGeoDataPy.xml
     MaterialPy.xml
     LinkExtensionPy.xml
+    LinkPy.xml
 )
 SOURCE_GROUP("XML" FILES ${FreeCADApp_XML_SRCS})
 
@@ -154,6 +156,7 @@ SET(Document_CPP_SRCS
     MergeDocuments.cpp
     Link.cpp
     LinkExtensionPyImp.cpp
+    LinkPyImp.cpp
 )
 
 SET(Document_HPP_SRCS
